--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
 /* General Styles */
+#text-content {
+  margin-right: 20px; /* Adjust margin as needed */
+}
 #grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* 4 columns */
-  grid-template-rows: repeat(4, 1fr); /* 4 rows */
   gap: 5px;
-  width: 520px; /* Adjusted width to accommodate grid gap and borders */
-  height: 520px; /* Adjusted height to accommodate grid gap and borders */
+  max-width: 600px; /* Limit width to 600px */
+  height: 600px; /* Limit height to 600px */
   overflow: auto; /* Enable scrolling if grid exceeds container */
 }
 .grid-cell {
   width: 100%;
   height: 100%;
-  background-color: #ddd;
+  opacity: 0.7; /* Set opacity to 50% */
 }
 /* Style the Go Back button */
 button {
@@ -37,10 +39,10 @@ body {
   background-image: url("memory.png");
   background-size: 100% 100%; /* Stretch the background image to cover the entire background */
   height: 100vh; /* Make the background cover the entire viewport height */
+  display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   background-position: center;
   background-repeat: no-repeat;
   color: white; /* Set the text color to white */
-  background-color: black;
 }
